Completed JSON parser to get coordinates of taxis

--- a/MckinseyHack/MckinseyHack/Info.plist
+++ b/MckinseyHack/MckinseyHack/Info.plist
@@ -24,6 +24,13 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Allow application to access user location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow access to taxi data</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
