--- a/McKinseyHackAndroid/app/src/main/AndroidManifest.xml
+++ b/McKinseyHackAndroid/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".JobActivity"></activity>
     </application>
 
 </manifest>
