--- a/McKinseyHackAndroid/app/build.gradle
+++ b/McKinseyHackAndroid/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
 }
