--- a/McKinseyHackAndroid/app/src/main/AndroidManifest.xml
+++ b/McKinseyHackAndroid/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +22,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".JobActivity"></activity>
+        <activity android:name=".JobsActivity"></activity>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
