--- a/McKinseyHackAndroid/app/src/main/AndroidManifest.xml
+++ b/McKinseyHackAndroid/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/donum_app_logo"
+        android:label="dönum"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".LoginActivity">
